--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </p>
     <p class="signature">– Chris</p>
     <div class="button">
-      <p>xxxxxxxxxxxx</p>
+      <p>CA: coming soon!</p>
     </div>
   </div>
 </body>
