--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <div class="container">
     <!-- Add MySpace logo -->
     <img src="myspacelogo.png" alt="MySpace Logo" class="logo">
-    <p class="message">Since our friend from vine launched a coin for the good cause, we decided to take part in it. </p>
+    <p class="message">Since our friend from Vine launched a coin for a good cause, we were inspired to join in.
+ </p>
     <br>
     <p class="message">
 
