--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </p>
     <p class="signature">– Chris</p>
     <div class="button">
-      <p>9XkjqyKmkkYLmE5Y7HJpDwwPB6UPeFgnMCqTnWzCpump</p>
+      <p>CA: to be announced in 1 min</p>
     </div>
   </div>
 </body>
