--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </p>
     <p class="signature">– Chris</p>
     <div class="button">
-      <p>CA: to be announced in 1 min</p>
+      <p>5NhYi2jN9NEGhgXB1ADGrqJ7nnMZQ1ddPj7tkENppump</p>
     </div>
   </div>
 </body>
